some mobile issues fixed and some layout issues on mobile
- tweaks made after conducting a mobile test

--- a/frontend/e-commerce-store/src/Components/Navbar/Navbar.css
+++ b/frontend/e-commerce-store/src/Components/Navbar/Navbar.css
@@ -298,4 +298,12 @@
     .nav-login-cart img {
         width: 24px;
     }
+
+    .login-form-btn {
+        z-index: 1000;
+    }
+
+    .signup-form-btn {
+        z-index: 1000;
+    }
 }
